--- a/frontend/assets/default-style.css
+++ b/frontend/assets/default-style.css
@@ -18,11 +18,16 @@ button {
     background-color: rgba(249, 234, 174, 0.85);
 }
 
+.layer3 {
+    background-color: rgba(0, 0, 0, 0.25);
+}
+
+
 .toggled {
     background-color: rgba(239, 231, 218, 0.9);
 }
 
-button>label {
+button label {
     color: black;
 }
 
